--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Package Management System By Mo Salah</title>
+    <title>Tracking System By Mo Salah</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -250,7 +250,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Package Management System</h1>
+            <h1>Package Tracking System By Mo Salah</h1>
         </div>
     </header>
     
